[gd_scene load_steps=9 format=2]

[ext_resource path="res://Data/Menu.gd" type="Script" id=1]
[ext_resource path="res://res/d9464-arkhip_font.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.643137, 0.670588, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.592157, 0.494118, 0.168627, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.698039, 0.823529, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.494118, 0.552941, 0.0901961, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 2
font_data = ExtResource( 3 )

[node name="Menu" type="Node2D"]
position = Vector2( -5, -24 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Start" type="Button" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 813.0
margin_top = 382.0
margin_right = 1091.0
margin_bottom = 447.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Start"

[node name="Start2" type="Button" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 807.0
margin_top = 523.0
margin_right = 1086.0
margin_bottom = 588.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Load"

[node name="Exit" type="Button" parent="TextureRect"]
margin_left = 884.0
margin_top = 655.0
margin_right = 1049.0
margin_bottom = 723.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Exit"

[node name="Name" type="Label" parent="TextureRect"]
margin_left = 541.0
margin_top = 95.0
margin_right = 1390.0
margin_bottom = 268.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.607843, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "         Proect 6210:
	Defenders of infinity"

[connection signal="pressed" from="TextureRect/Start" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/Start2" to="." method="_on_Start2_pressed"]
[connection signal="pressed" from="TextureRect/Exit" to="." method="_on_Button2_pressed"]
